Added new rails default
Signed-off-by: Ariejan de Vroom <ariejan@ariejan.net>

--- a/config/database.mysql.yml
+++ b/config/database.mysql.yml
@@ -18,6 +18,7 @@ development:
   adapter: mysql
   encoding: utf8
   database: baseapp_development
+  pool: 5
   username: root
   password:
   socket: /tmp/mysql.sock
@@ -29,6 +30,7 @@ test:
   adapter: mysql
   encoding: utf8
   database: baseapp_test
+  pool: 5
   username: root
   password:
   socket: /tmp/mysql.sock
@@ -37,6 +39,7 @@ production:
   adapter: mysql
   encoding: utf8
   database: baseapp_production
+  pool: 5
   username: root
   password: 
   socket: /tmp/mysql.sock
