--- a/config/config.yml
+++ b/config/config.yml
@@ -3,7 +3,7 @@
 
 development: &local
     site_name: BaseApp
-    site_url: http://baseapp.local
+    site_url: baseapp.local
     
     company_name: Kabisa ICT
     admin_email: admin@test.com
